--- a/SE/Balance_Banker.html
+++ b/SE/Balance_Banker.html
@@ -50,7 +50,7 @@
 
     .balances-table {
       border-collapse: collapse;
-      width: 100%;
+      width: 150%;
       border: 2px solid black;
       margin-bottom: 20px;
     }
@@ -118,23 +118,74 @@
   <main>
 	  <div class="line"></div>
     <div class="right-side">
-      <h2>Debit Cards</h2>
-      <table class="debit-card-table">
+      <h2>Balances Cards</h2>
+      <table class="Balances-table">
         <thead>
          <tr>
       <th>Client Name</th>
       <th>National ID</th>
       <th>Balance</th>
+      <th>Savings</th>
     </tr>
     <tr>
       <td>Ahmed Mohammed</td>
       <td>1234567890</td>
       <td>5000</td>
+      <td>2000</td>
     </tr>
     <tr>
       <td>Fatima Ali</td>
       <td>9876543210</td>
       <td>8000</td>
+      <td>3000</td>
+    </tr>
+    <tr>
+      <td>Mohammed Hassan</td>
+      <td>2468135790</td>
+      <td>3500</td>
+      <td>1000</td>
+    </tr>
+    <tr>
+      <td>Aisha Khalid</td>
+      <td>1357924680</td>
+      <td>6000</td>
+      <td>4000</td>
+    </tr>
+    <tr>
+      <td>Youssef Salah</td>
+      <td>5793146280</td>
+      <td>2000</td>
+      <td>500</td>
+    </tr>
+    <tr>
+      <td>Rana Ibrahim</td>
+      <td>8376152940</td>
+      <td>4500</td>
+      <td>1500</td>
+    </tr>
+    <tr>
+      <td>Hana Ali</td>
+      <td>7152039486</td>
+      <td>9000</td>
+      <td>2000</td>
+    </tr>
+    <tr>
+      <td>Ali Hassan</td>
+      <td>3527486190</td>
+      <td>2500</td>
+      <td>500</td>
+    </tr>
+    <tr>
+      <td>Nadia Ahmed</td>
+      <td>6091243875</td>
+      <td>7000</td>
+      <td>3000</td>
+    </tr>
+    <tr>
+      <td>Yara Mahmoud</td>
+      <td>9204738561</td>
+      <td>1500</td>
+      <td>1000</td>
     </tr>
         </tbody>
       </table>
