--- a/SE/Balance_Banker.html
+++ b/SE/Balance_Banker.html
@@ -10,105 +10,84 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
-  <title>Balance</title>
+  <title>Personal Information</title>
   <style>
-    body {
-      position: relative;
-    }
-	 
-
-    .left-side {
-      float: left;
-      width: 50%;
-      padding-right: 10px;
-      box-sizing: border-box;
-	  display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
+      .left-side {
+    margin: 0 auto;
+    margin-top: 50px;
+  }
 
     .right-side {
       float: right;
       width: 50%;
       padding-left: 10px;
       box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 
-    .balances-table {
+    table {
       border-collapse: collapse;
       width: 100%;
-      border: 2px solid black;
-      margin-bottom: 20px;
     }
 
-    .balances-table th,
-    .balances-table td {
+
+
+    th, td {
       border: 1px solid black;
       padding: 8px;
       text-align: left;
     }
 
-    .transaction-container {
-      margin-bottom: 20px;
-    }
-
-    .transaction-label {
-      display: block;
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
-
-    .transaction-input {
-      width: 100px;
-      margin-bottom: 5px;
-    }
-
-    .transaction-button {
+    .buttons {
       margin-top: 10px;
     }
-
-    .sign-out-button {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      font-weight: bold;
-    }
- footer {     font-family: 'Roboto', sans-serif;     background-color: #81b29a;     padding: 10px;     text-align: center;     color: white;     position: absolute ;     bottom: 0%;     left: 0;     width: 99%;     height: 35px;  }
-	</style>
+  </style>
 </head>
 <body>
   <header>
-    <div class="logo">
+  <div class="logo">
       <img src="SE/logo.png" alt="Logo">
     </div>
-    <h1>Balance</h1>
-    <a href="Home.html" class="sign-out-button">Sign Out</a>
+    <h1>Personal Information</h1>
+	<a href="Home.html" class="sign-out-button">Sign Out</a>
   </header>
-  <nav>
-    <ul class="menu">
-      <li><a href="BankerPage.html" id="home">Home</a></li>
-      <li><a href="ContactUs.html" id="contact">Contact</a></li>
-      <li class="dropdown">
-        <a href="#" id="client-account">Client's Account &#9662;</a>
-        <ul class="dropdown-menu">
-          <li><a href="Personalinfo_Banker.html">Personal Information</a></li>
-          <li><a href="Liabilities_Banker.html">Liabilities</a></li>
-          <li><a href="Balance_Banker.html">Balance</a></li>
-          <li><a href="ClientTransactions.html">Transactions</a></li>
-        </ul>
-      </li>
-      <li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
-      
-    </ul>
-  </nav>
-  <main>
-	  <div class="line"></div>
-    <div class="right-side">
-      <h2>Balances Cards</h2>
-      <table class="Balances-table">
+   <nav>
+      <ul class="menu">
+        <li><a href="BankerPage.html" id="home">Home</a></li>
+        <li class="dropdown">
+          <a href="#" id="client-account">Client's Account &#9662;</a>
+          <ul class="dropdown-menu">
+            <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
+            <li><a href="Liabilities_Banker.html">Liabilities</a></li>
+            <li><a href="Balance_Banker.html">Balance</a></li>
+			
+          </ul>
+        </li>
+		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
+
+      </ul>
+    </nav>
+ <main>
+  <div class="left-side">
+    <div class="left-side">
+      <h2>Personal Information</h2>
+      <table>
         <thead>
-         <tr>
+        <tr>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Date of Birth</th>
+          <th>Nationality</th>
+          <th>Address</th>
+          <th>National ID</th>
+          <th>User ID</th>
+        </tr>
+        </thead>
+        <tbody>
+    <tr>
       <th>Client Name</th>
       <th>National ID</th>
       <th>Balance</th>
@@ -176,12 +155,18 @@
     </tr>
         </tbody>
       </table>
-  </main>
+    </div>
+
+  </div>
+
+
+ </main>
 
   <footer>
     <p>&copy; 2023 ABGBank. All rights reserved.</p>
-  </footer>
-  
+  </footer>  
   <script src="script.js"></script>
+<script>
+</script>
 </body>
 </html>
