--- a/SE/Balance_Banker.html
+++ b/SE/Balance_Banker.html
@@ -77,13 +77,10 @@
       <table>
         <thead>
         <tr>
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>Date of Birth</th>
-          <th>Nationality</th>
-          <th>Address</th>
-          <th>National ID</th>
-          <th>User ID</th>
+         <th>Client Name</th>
+      <th>National ID</th>
+      <th>Balance</th>
+      <th>Savings</th>
         </tr>
         </thead>
         <tbody>
