--- a/SE/Balance_Banker.html
+++ b/SE/Balance_Banker.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
-  <title>Personal Information</title>
+  <title>Balances</title>
   <style>
       .left-side {
     margin: 0 auto;
@@ -51,7 +51,7 @@
   <div class="logo">
       <img src="SE/logo.png" alt="Logo">
     </div>
-    <h1>Personal Information</h1>
+    <h1>Balances</h1>
 	<a href="Home.html" class="sign-out-button">Sign Out</a>
   </header>
    <nav>
