--- a/SE/Balance_Banker.html
+++ b/SE/Balance_Banker.html
@@ -73,7 +73,7 @@
  <main>
   <div class="left-side">
     <div class="left-side">
-      <h2>Personal Information</h2>
+      <h2>Balances</h2>
       <table>
         <thead>
         <tr>
