Announcements page edits

--- a/SE/AdminPage.html
+++ b/SE/AdminPage.html
@@ -142,7 +142,7 @@
             <li><a href="ClientTransactions.html">Transactions</a></li>
           </ul>
         </li>
-        <li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
+        <li><a href="AnouncementsAdmin.html" id="anouncments">Announcements</a></li>
            <li><a href="Complaints_admin.html">Complaints</a></li>
            <li><a href="Close-requests.html">Request accounts close</a></li>
       </ul>
