--- a/SE/BankerPage.html
+++ b/SE/BankerPage.html
@@ -37,7 +37,7 @@
             <li><a href="credit_card_requests.html">Credit requests</a></li>
           </ul>
         </li>
-		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
+		<li><a href="AnouncementsBanker.html" id="anouncments">Anouncements</a></li>
     <li><a href="Complaints_banker.html">Complaints</a></li>
     <li> <a href="Urgent_banker.html">Card Urgents</a></li>
     <li> <a href="Card_replacement.html">Card Replacement</a></li>
