--- a/SE/AdminPage.html
+++ b/SE/AdminPage.html
@@ -132,7 +132,7 @@
     </header>
    <nav>
       <ul  class="admin-menu">
-        <li><a href="Home.html" id="home">Home</a></li>
+        <li><a href="AdminPage.html" id="home">Home</a></li>
         <li class="dropdown" >
           <a href="#" id="client's_account">Client's Account &#9662;</a>
           <ul class="admin-dropdown-menu" >
