--- a/SE/Balance_Banker.html
+++ b/SE/Balance_Banker.html
@@ -66,7 +66,9 @@
           </ul>
         </li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
-
+    <li><a href="Complaints_banker.html">Complaints</a></li>
+    <li> <a href="Urgent_banker.html">Card Urgents</a></li>
+    <li> <a href="Card_replacement.html">Card Replacement</a></li>
       </ul>
     </nav>
  <main>
