--- a/SE/PersonalinfoBanker.html
+++ b/SE/PersonalinfoBanker.html
@@ -61,12 +61,14 @@
           <a href="#" id="client-account">Client's Account &#9662;</a>
           <ul class="dropdown-menu">
             <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
+            <li><a href="Liabilities_Banker.html">Liabilities</a></li>
             <li><a href="Balance_Banker.html">Balance</a></li>
-			
           </ul>
         </li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
-
+    <li><a href="Complaints_banker.html">Complaints</a></li>
+    <li> <a href="Urgent_banker.html">Card Urgents</a></li>
+    <li> <a href="Card_replacement.html">Card Replacement</a></li>
       </ul>
     </nav>
  <main>
