--- a/SE/ClientContact.html
+++ b/SE/ClientContact.html
@@ -16,7 +16,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-			overflow:hidden;
+            overflow: hidden;
         }
 
         .container {
@@ -46,7 +46,7 @@
             position: relative;
             top: 300px;
             right: 20px;
-            left:  765px;
+            left: 765px;
             bottom: 20px;
         }
 
@@ -64,49 +64,40 @@
         .block p {
             margin-bottom: 0;
         }
-           .left-side {
-    margin: 0 auto;
-    margin-top: 50px;
-  }
 
-    .right-side {
-      float: right;
-      width: 50%;
-      padding-left: 10px;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
+        .left-side {
+            margin: 0 auto;
+            margin-top: 50px;
+        }
 
-    table {
-      border-collapse: collapse;
-      width: 100%;
-    }
+        .right-side {
+            float: right;
+            width: 50%;
+            padding-left: 10px;
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
 
-    th, td {
-      border: 1px solid black;
-      padding: 8px;
-      text-align: center;
-    }
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
 
-    .buttons {
-      margin-top: 10px;
-    }
+        th,
+        td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: center;
+        }
 
-    footer {
-    font-family: 'Roboto', sans-serif;
-    background-color: #81b29a;
-    padding: 10px;
-    text-align: center;
-    color: white;
-    position: absolute ;
-    bottom: 0%;
-    left: 0;
-    width: 99%;
-    height: 35px;
-}
+        .buttons {
+            margin-top: 10px;
+        }
+
+        
     </style>
 
 </head>
@@ -119,30 +110,30 @@
 </header>
 <nav>
     <ul class="menu">
-      <li><a href="ClientPage.html" id="home">Home</a></li>
-      <li><a href="ClientContact.html" id="contact">Contact</a></li>
-      <li class="dropdown">
-        <a href="#" id="my-account">My Account &#9662;</a>
-        <ul class="dropdown-menu">
-          <li><a href="Personalinfo.html">Personal Information</a></li>
-          <li><a href="Liabilities.html">Liabilities</a></li>
-          <li><a href="Balance.html">Balance</a></li>
-        </ul>
-      </li>
-      <li><a href="Transfer.html">Transfer</a></li>
-      <li><a href="Bills.html">Bills</a></li>
-      <li class="dropdown">
-        <a href="#" id="my-account">Transactions &#9662;</a>
-        <ul class="dropdown-menu">
-          <li><a href="ClientTransactions.html">View All Transactions</a></li>
-          <li><a href="CardTransactions.html">View Cards Transactions</a></li>
-        </ul>
-      </li>
-	  <li><a href="CreditCardPoints.html">My Points</a></li>
-      <li><a href="ClientAnnoun.html" id="anouncments">Announcements</a></li>
-	   <li><a href="Urgent.html" id="urgent">Urgent</a></li>
+        <li><a href="ClientPage.html" id="home">Home</a></li>
+        <li><a href="ClientContact.html" id="contact">Contact</a></li>
+        <li class="dropdown">
+            <a href="#" id="my-account">My Account &#9662;</a>
+            <ul class="dropdown-menu">
+                <li><a href="Personalinfo.html">Personal Information</a></li>
+                <li><a href="Liabilities.html">Liabilities</a></li>
+                <li><a href="Balance.html">Balance</a></li>
+            </ul>
+        </li>
+        <li><a href="Transfer.html">Transfer</a></li>
+        <li><a href="Bills.html">Bills</a></li>
+        <li class="dropdown">
+            <a href="#" id="my-account">Transactions &#9662;</a>
+            <ul class="dropdown-menu">
+                <li><a href="ClientTransactions.html">View All Transactions</a></li>
+                <li><a href="CardTransactions.html">View Cards Transactions</a></li>
+            </ul>
+        </li>
+        <li><a href="CreditCardPoints.html">My Points</a></li>
+        <li><a href="ClientAnnoun.html" id="anouncments">Announcements</a></li>
+        <li><a href="Urgent.html" id="urgent">Urgent</a></li>
     </ul>
-  </nav>
+</nav>
 <body>
 
 <div class="container">
@@ -163,7 +154,7 @@
     </div>
     <div class="block submit-complaint">
         <h2>Submit a Complaint</h2>
-        <form>
+        <form id="complaint-form">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required><br><br>
             <label for="email">Email:</label>
@@ -173,10 +164,36 @@
             <input type="submit" value="Submit">
         </form>
     </div>
-
 </div>
+
+<div class="banner" id="transaction-banner">
+    <span class="banner-text" id="transaction-banner-text"></span>
+</div>
+
 <footer>
     <p>&copy; 2023 ABGBank. All rights reserved.</p>
 </footer>
+
+<script>
+    var banner = document.getElementById('transaction-banner');
+    var bannerText = document.getElementById('transaction-banner-text');
+
+    var complaintForm = document.getElementById("complaint-form");
+    complaintForm.addEventListener("submit", function (event) {
+        event.preventDefault(); // Prevent form submission
+        var nameInput = document.getElementById("name");
+        var emailInput = document.getElementById("email");
+        var complaintTextarea = document.getElementById("complaint");
+
+        if (nameInput.value === "" || emailInput.value == "" || complaintTextarea.value == "") {
+            bannerText.textContent = 'Please fill all the fields!';
+            banner.style.display = 'block';
+        } else {
+            bannerText.textContent = 'Complaint/Issue sent';
+            banner.style.display = 'block';
+            complaintForm.reset(); // Reset the form after submission
+        }
+    });
+</script>
 </body>
 </html>
