--- a/SE/PersonalinfoBanker.html
+++ b/SE/PersonalinfoBanker.html
@@ -63,6 +63,10 @@
             <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
             <li><a href="Liabilities_Banker.html">Liabilities</a></li>
             <li><a href="Balance_Banker.html">Balance</a></li>
+            <li><a href="User search.html">Transfer History</a></li>	
+            <li><a href="Loan_requests.html">Loan requests</a></li>
+            <li><a href="credit_card_requests.html">Credit requests</a></li>
+          
           </ul>
         </li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
