--- a/SE/AnouncementsBanker.html
+++ b/SE/AnouncementsBanker.html
@@ -46,10 +46,11 @@
         <li class="dropdown">
             <a href="#" id="my-account">my Account &#9662;</a>
             <ul class="dropdown-menu">
-                <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
-                <li><a href="Liabilities_Banker.html">Liabilities</a></li>
-                <li><a href="Balance_Banker.html">Balance</a></li>
-                <li><a href="ClientTransactions.html">Transactions</a></li>
+            <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
+            <li><a href="Balance_Banker.html">Balance</a></li>
+            <li><a href="User search.html">Transfer History</a></li>	
+            <li><a href="Loan_requests.html">Loan requests</a></li>
+            <li><a href="credit_card_requests.html">Credit requests</a></li>
             </ul>
         </li>
         <li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
