--- a/SE/Balance_Banker.html
+++ b/SE/Balance_Banker.html
@@ -60,8 +60,11 @@
         <li class="dropdown">
           <a href="#" id="client-account">Client's Account &#9662;</a>
           <ul class="dropdown-menu">
-            <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
+              <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
             <li><a href="Balance_Banker.html">Balance</a></li>
+            <li><a href="User search.html">Transfer History</a></li>	
+            <li><a href="Loan_requests.html">Loan requests</a></li>
+            <li><a href="credit_card_requests.html">Credit requests</a></li>
 			
           </ul>
         </li>
