--- a/SE/BankerTransactions.html
+++ b/SE/BankerTransactions.html
@@ -43,8 +43,11 @@
       <li><a href="BankerPage.html" id="home">Home</a></li>
       <li class="dropdown">
         <ul class="dropdown-menu">
-          <li><a href="Personalinfo.html">Personal Information</a></li>
-          <li><a href="Balance.html">Balance</a></li>
+             <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
+            <li><a href="Balance_Banker.html">Balance</a></li>
+            <li><a href="User search.html">Transfer History</a></li>	
+            <li><a href="Loan_requests.html">Loan requests</a></li>
+            <li><a href="credit_card_requests.html">Credit requests</a></li>
         </ul>
       </li>
     
