--- a/SE/ContactUs.html
+++ b/SE/ContactUs.html
@@ -48,13 +48,13 @@
             right: 20px;
             left:  765px;
             bottom: 20px;
-        }
+            }
 
         .submit-complaint {
             position: relative;
             bottom: 20px;
-            right: 20px;
-            width: 30%;
+            right: 190px;
+            width: 50 px;
         }
 
         .block h2 {
