--- a/SE/Complaints_admin.html
+++ b/SE/Complaints_admin.html
@@ -127,7 +127,7 @@
             <li><a href="Balance_admin.html">Balance</a></li>
           </ul>
         </li>
-		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
+		<li><a href="AnouncementsAdmin.html" id="anouncments">Announcements</a></li>
     <li> <a href="Complaints_admin.html">Complaints</a></li>
       </ul>
     </nav>
