--- a/SE/Loan_requests.html
+++ b/SE/Loan_requests.html
@@ -58,15 +58,14 @@
         <li class="dropdown">
           <a href="#" id="client-account">Client's Account &#9662;</a>
           <ul class="dropdown-menu">
-            <li><a href="Personalinfo_admin.html">Personal Information</a></li>
-            <li><a href="Liabilities_admin.html">Liabilities</a></li>
-            <li><a href="Balance_admin.html">Balance</a></li>
+            <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
+            <li><a href="Balance_Banker.html">Balance</a></li>
             <li><a href="Loan_requests.html">Loan requests</a></li>
             <li><a href="Credit_card_requests.html">Credit requests</a></li>
           </ul>
         </li>
-		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
-    <li> <a href="Complaints_admin.html">Complaints</a></li>
+		<li><a href="AnouncementsBanker.html" id="anouncments">Announcements</a></li>
+    <li> <a href="Complaints_banker.html">Complaints</a></li>
       </ul>
     </nav>
  <main>
