--- a/SE/Urgent_banker.html
+++ b/SE/Urgent_banker.html
@@ -53,22 +53,22 @@
 	<a href="Home.html" class="sign-out-button">Sign Out</a>
   </header>
    <nav>
-      <ul class="menu">
-        <li><a href="BankerPage.html" id="home">Home</a></li>
+    <ul class="menu">
         <li class="dropdown">
-          <a href="#" id="client-account">Client's Account &#9662;</a>
+          <a href="#" id="my-account">Client information &#9662;</a>
           <ul class="dropdown-menu">
-            <li><a href="Personalinfo_Banker.html">Personal Information</a></li>
-            <li><a href="Liabilities_Banker.html">Liabilities</a></li>
+            <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
             <li><a href="Balance_Banker.html">Balance</a></li>
+            <li><a href="User search.html">Transfer History</a></li>	
             <li><a href="Loan_requests.html">Loan requests</a></li>
             <li><a href="credit_card_requests.html">Credit requests</a></li>
           </ul>
         </li>
-		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
+		<li><a href="AnouncementsBanker.html" id="anouncments">Anouncements</a></li>
     <li><a href="Complaints_banker.html">Complaints</a></li>
     <li> <a href="Urgent_banker.html">Card Urgents</a></li>
     <li> <a href="Card_replacement.html">Card Replacement</a></li>
+    <li> <a href="Banker_points.html">Redeem points</a></li>
       </ul>
     </nav>
  <main>
