--- a/SE/BankerPage.html
+++ b/SE/BankerPage.html
@@ -25,23 +25,23 @@
 </header>
 </header>
    <nav>
-      <ul class="menu">
-
-        <li class="dropdown">
-          <a href="#" id="my-account">Client information &#9662;</a>
-          <ul class="dropdown-menu">
-            <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
-            <li><a href="Balance_Banker.html">Balance</a></li>
-            <li><a href="User search.html">Transfer History</a></li>	
-            <li><a href="Loan_requests.html">Loan requests</a></li>
-            <li><a href="credit_card_requests.html">Credit requests</a></li>
-          </ul>
-        </li>
-		<li><a href="AnouncementsBanker.html" id="anouncments">Anouncements</a></li>
-    <li><a href="Complaints_banker.html">Complaints</a></li>
-    <li> <a href="Urgent_banker.html">Card Urgents</a></li>
-    <li> <a href="Card_replacement.html">Card Replacement</a></li>
-      </ul>
+    <ul class="menu">
+      <li class="dropdown">
+        <a href="#" id="my-account">Client information &#9662;</a>
+        <ul class="dropdown-menu">
+          <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
+          <li><a href="Balance_Banker.html">Balance</a></li>
+          <li><a href="User search.html">Transfer History</a></li>	
+          <li><a href="Loan_requests.html">Loan requests</a></li>
+          <li><a href="credit_card_requests.html">Credit requests</a></li>
+        </ul>
+      </li>
+  <li><a href="AnouncementsBanker.html" id="anouncments">Anouncements</a></li>
+  <li><a href="Complaints_banker.html">Complaints</a></li>
+  <li> <a href="Urgent_banker.html">Card Urgents</a></li>
+  <li> <a href="Card_replacement.html">Card Replacement</a></li>
+  <li> <a href="Banker_points.html">Redeem points</a></li>
+    </ul>
     </nav>
     </body>
     </html>
