--- a/SE/Complaints_banker.html
+++ b/SE/Complaints_banker.html
@@ -117,7 +117,6 @@
   </header>
    <nav>
     <ul class="menu">
-
       <li class="dropdown">
         <a href="#" id="my-account">Client information &#9662;</a>
         <ul class="dropdown-menu">
@@ -132,6 +131,7 @@
   <li><a href="Complaints_banker.html">Complaints</a></li>
   <li> <a href="Urgent_banker.html">Card Urgents</a></li>
   <li> <a href="Card_replacement.html">Card Replacement</a></li>
+  <li> <a href="Banker_points.html">Redeem points</a></li>
     </ul>
     </nav>
  <main>
