--- a/SE/AdminTransactions.html
+++ b/SE/AdminTransactions.html
@@ -51,7 +51,7 @@
         </ul>
       </li>
     
-      <li><a href="AnouncementsBanker.html" id="anouncments">Announcements</a></li>
+      <li><a href="AnouncementsAdmin.html" id="anouncments">Announcements</a></li>
     </ul>
   </nav>
   <main>
