More admin edits

--- a/SE/Close-requests.html
+++ b/SE/Close-requests.html
@@ -125,10 +125,10 @@
             <li><a href="Personalinfo_admin.html">Personal Information</a></li>
             <li><a href="Liabilities_admin.html">Liabilities</a></li>
             <li><a href="Balance_admin.html">Balance</a></li>
-            <li><a href="ClientTransactions.html">Transactions</a></li>
+            <li><a href="AdminTransactions.html">Transactions</a></li>
           </ul>
         </li>
-		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
+		<li><a href="AnouncementsAdmin.html" id="anouncments">Announcements</a></li>
     <li> <a href="Complaints_admin.html">Complaints</a></li>
       </ul>
     </nav>
