admin style edits

--- a/SE/AdminPage.html
+++ b/SE/AdminPage.html
@@ -52,10 +52,10 @@
           padding: 5px 10px;
           transition: background-color 0.3s ease;
       }
-  
-  .admin-menu li a:hover {
-    background-color: #d9d9d9;
-  }
+
+        .admin-menu li a:hover {
+            background-color: #AE3F21;
+        }
   /* Existing styles */
   
   /* Existing styles */
@@ -63,18 +63,18 @@
   .admin-menu li.dropdown {
     position: relative;
   }
-  
-  .admin-dropdown-menu {
-    display: none;
-    visibility: hidden;
-    position: absolute;
-    background-color: #777777;
-    padding: 10px;
-    top: 100%;
-    left: 0;
-    z-index: 999; /* Adjust the z-index value as needed */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  }
+
+        .admin-dropdown-menu {
+            display: none;
+            visibility: hidden;
+            position: absolute;
+            background-color: #C9DED4;
+            padding: 10px;
+            top: 100%;
+            left: 0;
+            z-index: 999; /* Adjust the z-index value as needed */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
   
   .admin-menu li.dropdown:hover .admin-dropdown-menu {
     display: block;
@@ -84,18 +84,18 @@
     margin-bottom: 5px;
     padding:5px;
   }
-  
-      .admin-dropdown-menu li a {
-          font-family: 'Roboto', sans-serif;
-          color: #00529f;
-          text-decoration: none;
-          padding: 5px 10px;
-          display: block;
-      }
-  
-  .admin-dropdown-menu li a:hover {
-    background-color: #e0e0e0;
-  }
+
+        .admin-dropdown-menu li a {
+            font-family: 'Roboto', sans-serif;
+            color: #21362C;
+            text-decoration: none;
+            padding: 5px 10px;
+            display: block;
+        }
+
+     .admin-dropdown-menu li a:hover {
+                background-color: #AE3F21;
+            }
   .notifications-window {
     width: 150%;
     padding: 20px;
