minor layout edit

--- a/SE/AdminPage.html
+++ b/SE/AdminPage.html
@@ -147,20 +147,19 @@
       </ul>
    </nav>
       <div class="center_container">
-        <div class="buttons">
-          <label for="userid-input">Entering id of Client:</label>
-          <input type="text" id="userid-input" class="textbox" placeholder="user_id">
-          <button class="UseridButton" >Go to client profile</button>
-        </div>
-      </div>
+          <div class="buttons">
+              <label for="userid-input">Entering id of Client:</label>
+              <input type="text" id="userid-input" class="textbox" placeholder="user_id">
+              <button class="UseridButton">Go to client profile</button>
+          <div class="buttons">
+               <label for="announce-input">Entering a System Announcement:</label>
+               <input type="text" id="announce-input" class="textbox" placeholder="place an announcement">
+               <button class="announcement_button">Submit an Announcement</button>
+
+              </div>
+          </div>
     </div>
-    <div class="right_side">
-      <div class="buttons">
-        <label for="announce-input">Entering a System Announcement:</label>
-        <input type="text" id="announce-input" class="textbox" placeholder="place an announce">
-        <button class="announcement_button" >Submit an Announcement</button>
-      </div>
-    </div>
+    
 
     <div style="clear: both;"></div>
 	<div class="banner" id="announce-banner">
