--- a/SE/AdminPage.html
+++ b/SE/AdminPage.html
@@ -148,11 +148,11 @@
    </nav>
       <div class="center_container">
           <div class="buttons">
-              <label for="userid-input">Entering id of Client:</label>
+              <label for="userid-input">Enter Client id:</label>
               <input type="text" id="userid-input" class="textbox" placeholder="user_id">
               <button class="UseridButton">Go to client profile</button>
           <div class="buttons">
-               <label for="announce-input">Entering a System Announcement:</label>
+               <label for="announce-input">Enter a System Announcement:</label>
                <input type="text" id="announce-input" class="textbox" placeholder="place an announcement">
                <button class="announcement_button">Submit an Announcement</button>
 
