--- a/SE/ClientContact.html
+++ b/SE/ClientContact.html
@@ -148,9 +148,9 @@
     </div>
     <div class="block call-us">
         <h2>Call Us</h2>
-        <p>Phone: 123-456-7890</p>
-        <p>Email: info@bank.com</p>
-        <p>Address: 123 Main St, City, State, ZIP</p>
+        <p>Phone: +97164855145</p>
+        <p>Email: AGBank@AGBDomain.com</p>
+        <p>Address: 20 StaakenerStrasse 23 13581</p>
     </div>
     <div class="block submit-complaint">
         <h2>Submit a Complaint</h2>
