--- a/SE/Complaints_admin.html
+++ b/SE/Complaints_admin.html
@@ -61,10 +61,10 @@
           padding: 5px 10px;
           transition: background-color 0.3s ease;
       }
-  
-  .admin-menu li a:hover {
-    background-color: #d9d9d9;
-  }
+
+          .admin-menu li a:hover {
+              background-color: #AE3F21;
+          }
   /* Existing styles */
   
   /* Existing styles */
@@ -118,6 +118,7 @@
    <nav>
       <ul class="admin-menu">
         <li><a href="AdminPage.html" id="home">Home</a></li>
+
         <li class="dropdown">
           <a href="#" id="client-account">Client's Account &#9662;</a>
           <ul class="admin-dropdown-menu">
