--- a/SE/Balance_admin.html
+++ b/SE/Balance_admin.html
@@ -108,10 +108,10 @@
               padding: 5px 10px;
               transition: background-color 0.3s ease;
           }
-      
-      .admin-menu li a:hover {
-        background-color: #d9d9d9;
-      }
+
+            .admin-menu li a:hover {
+                background-color: #AE3F21;
+            }
       /* Existing styles */
       
       /* Existing styles */
