--- a/SE/Bills_admin.html
+++ b/SE/Bills_admin.html
@@ -114,6 +114,8 @@
               <th>Issue Date</th>
               <th>Due Date</th>
               <th>Amount</th>
+              <th>status</th>
+              <th>response</th>
             </tr>
           </thead>
           <tbody>
@@ -123,6 +125,8 @@
               <td>2023-05-01</td>
               <td>2023-07-15</td>
               <td>$100.00</td>
+              <td id = "status1">Paid</td>
+              <td></td>
             </tr>
             <tr>
               <td>789012</td>
