close requests tweaking

--- a/SE/Close-requests.html
+++ b/SE/Close-requests.html
@@ -61,10 +61,10 @@
           padding: 5px 10px;
           transition: background-color 0.3s ease;
       }
-  
-  .admin-menu li a:hover {
-    background-color: #d9d9d9;
-  }
+
+          .admin-menu li a:hover {
+              background-color: #AE3F21;
+          }
   /* Existing styles */
   
   /* Existing styles */
@@ -120,7 +120,6 @@
         <li><a href="AdminPage.html" id="home">Home</a></li>
         <li><a href="ContactUs.html" id="contact">Contact</a></li>
         <li class="dropdown">
-          <a href="#" id="client-account">Client's Account &#9662;</a>
           <ul class="admin-dropdown-menu">
             <li><a href="Personalinfo_admin.html">Personal Information</a></li>
             <li><a href="Liabilities_admin.html">Liabilities</a></li>
